--- a/style.css
+++ b/style.css
@@ -91,3 +91,13 @@ body{
     font-size: 20px;
     margin-top: 10px;
 }
+
+.inspire{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 60px;
+}
+.video{
+   margin-left: 600px;
+}
