--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ text-align: center;
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin-bottom: 100px;
 }
 .support-title{
     padding-top: 20px;
@@ -186,4 +187,16 @@ text-align: center;
     border-radius: 10px;
     font-weight: bold;
     font-size: 20px;
+}
+.footer-color{
+    display: flex;
+    justify-content: space-around;
+   
+    width: 1140px;
+    height: 36px;
+}
+.footer{
+    height: 100px;
+    width: 1440px;
+    background-color: rgba(13, 19, 33, 0.03);
 }
